# RoboticsStudioGroup

./: README.md  week2
Sprint_1/: OfficeWorkSpaceWorld  Office_Floor Plan.jpg:Zone.Identifier
Sprint_1/OfficeWorkSpace/: model.config  model.sdf
sprint_2/: my_map.pgm
sprint_2/week4/: package.xml
sprint_2/week4/src/: state_estimation.cpp
sprint_2/week5/: CMakeLists.txt
sprint_2/week5/src/: scan_to_image.cpp
sprint_2/week6/: CMakeLists.txt  package.xml
sprint_2/week6/src/: scan_matching_localiser.cpp
tutorial_work/: CMakeLists.txt  package.xml  tutorial4.txt
tutorial_work/src/: scan_to_image.cpp
week1/: Lab1  Lab1.cpp
week2/: CMakeLists.txt  package.xml
week2/log/: latest_list
week2/src/: laser_processing.cpp
week4/: CMakeLists.txt
week6/: CMakeLists.txt
week6/src/: scan_matching_localiser.cpp
week7/: CMakeLists.txt  package.xml
week7/launch/: week7_launch.py
world_maps/launch/: empty_world.launch.py  office_world.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  turtlebot3_house.launch.py  turtlebot3_world.launch.py
world_maps/launch/log/: latest_list
world_maps/log/: latest_list
